--- a/index.qmd
+++ b/index.qmd
@@ -4,4 +4,6 @@ title: "Dchan59.github.io"
 
 This is a Quarto website.
 
+My name is Dog. Dog is Dog.
+
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
